--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,11 @@
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
-  }
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+}
   to {
     transform: rotate(360deg);
   }
