--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,9 +1,14 @@
 main {
+
+    position:relative;
     margin: 30px auto;
-    padding: 35px 15px;
-    width:500px;
+    padding-top:12px;
+    padding-left:30px;
+    padding-bottom: 19px;
+    width:700px;
+    height:250px;
     background-color:#789090;
-    border: 5px solid rgb(0, 0, 0);
+    border: 3px solid rgb(0, 0, 0);
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -16,8 +21,47 @@ main h2, main h3, main h4 {
     color:#fff;
 }
 
+main h2 {
+    text-decoration: underline;
+    text-transform: uppercase;
+    font-size: 25px;
+    letter-spacing: 3px;
+    
+}
+
+
 main p {
     color:#fff;
     text-shadow: 3px 3px 3px #000000;
     font-size: 22px;
+}
+
+.next-button {
+    position:absolute;
+    right:25px;
+    cursor:pointer;
+    color:#fff;
+    border: 1px solid #2c2323;
+    background:#000;
+    padding:10px;
+    border-radius: 100%;
+    font-size: 22px;
+    transition:all 300ms;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    -webkit-transition:all 300ms;
+    -moz-transition:all 300ms;
+    -ms-transition:all 300ms;
+    -o-transition:all 300ms;
+}
+
+.next-button:hover {
+    color:#000;
+    background-color: #fff;
+    border:1px solid #000000;
+   
+    box-shadow: 2px 2px 10px #000000;
+   
 }
