--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
 
 header {
     background-color: #79C000;
-    height:150px;
+    height:70px;
 }
 
 
@@ -16,8 +16,9 @@ h1 {
 
     color:white;
     text-align: right;
-    line-height: 150px;
+    line-height: 70px;
     text-transform: uppercase;
     font-family: 'Loto';
     padding-right: 20px;
+    letter-spacing: 3px;
 }
