--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,10 +15,21 @@ header {
 h1 {
 
     color:white;
-    text-align: right;
+    text-align: center;
     line-height: 70px;
     text-transform: uppercase;
     font-family: 'Loto';
     padding-right: 20px;
     letter-spacing: 3px;
+}
+.container-header {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.img-logo {
+    width:100px;
+    max-width: 150px;
+    max-height:70px;
 }
