--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
