--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,12 +1,18 @@
 main {
+    min-height: calc(100vh - 20vh - 70px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.article_section {
     position:relative;
     margin: 30px auto;
     padding-top:12px;
-    padding-left:30px;
-    padding-right: 30px;
-    padding-bottom: 20px;
+    padding-left:40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
     min-width: 700px;
-    max-width: 80%;
+    max-width: 75%;
     height: auto;
     background-color:#789090;
     border: 3px solid rgb(0, 0, 0);
@@ -17,21 +23,19 @@ main {
     -o-border-radius: 30px;
 }
 
-main h2, main h3, main h4 {
+.article_section h2, .article_section h3, .article_section h4 {
     text-align: center;
     color:#fff;
 }
 
-main h2 {
+.article_section h2 {
     text-decoration: underline;
     text-transform: uppercase;
     font-size: 25px;
     letter-spacing: 3px;
-    
 }
 
-
-main p {
+.article_section p {
     color:#fff;
     text-shadow: 3px 3px 3px #000000;
     font-size: 22px;
@@ -40,7 +44,8 @@ main p {
 
 .next-button {
     position:absolute;
-    right:25px;
+    right: 15px;
+    bottom: 15px;
     cursor:pointer;
     color:#fff;
     border: 1px solid #2c2323;
@@ -63,7 +68,5 @@ main p {
     color:#000;
     background-color: #fff;
     border:1px solid #000000;
-   
     box-shadow: 2px 2px 10px #000000;
-   
 }
