--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,9 @@
 
 header {
     background-color: #79C000;
-    height:70px;
+    width:100%;
+    height:10%;
+    margin:0 auto;
 }
 
 
@@ -17,6 +19,7 @@ h1 {
     color:white;
     text-align: center;
     line-height: 70px;
+    font-size: 30px;
     text-transform: uppercase;
     font-family: 'Loto';
     padding-right: 20px;
@@ -32,6 +35,47 @@ h1 {
     width:100px;
     max-width: 150px;
     max-height:70px;
+}
+
+@media (max-width: 780px){
+
+    h1 {
+
+        font-size: 20px;
+
+    }
+
+}
+@media (max-width: 627px){
+
+    h1 {
+
+        font-size: 15px;
+
+    }
+
+    .img-logo {
+        width:60px;
+        height:50px;
+        max-width: 150px;
+        max-height:70px;
+    }
+
+}
+@media (max-width: 475px){
+
+   .container-header{
+flex-direction: column;
+column-gap: 30px;
+padding-bottom: 10px;
+   }
+
+   .img-logo {
+    margin:auto auto;
+    
+   }
+
+   
 }
 
 .dark-mode {
