--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,9 +1,12 @@
 main {
+    
     min-height: calc(100vh - 20vh - 70px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
 .article_section {
     position:relative;
     margin: 30px auto;
@@ -11,17 +14,24 @@ main {
     padding-left:40px;
     padding-right: 40px;
     padding-bottom: 40px;
-    min-width: 700px;
-    max-width: 75%;
+    max-width: 90%;
     height: auto;
     background-color:#789090;
     border: 3px solid rgb(0, 0, 0);
-    border-radius: 30px;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
-    -ms-border-radius: 30px;
-    -o-border-radius: 30px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    width:80%;
 }
+
+/* @media (max-width:740px){
+
+    .article_section {
+        width:30%;
+    }
+} */
 
 .article_section h2, .article_section h3, .article_section h4 {
     text-align: center;
