--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,100 +1,87 @@
 @font-face {
-    font-family: 'Loto';
-    src: url('../fonts/Lato-Black.ttf');
-    src: url('../fonts/Lato-BlackItalic.ttf');
+    font-family: "Loto";
+    src: url("../fonts/Lato-Black.ttf");
+    src: url("../fonts/Lato-BlackItalic.ttf");
 }
-
-
 
 header {
-    background-color: #79C000;
-    width:100%;
-    height:10%;
-    margin:0 auto;
+    background-color: #79c000;
+    width: 100%;
+    height: 10%;
+    margin: 0 auto;
 }
 
-
 h1 {
-
-    color:white;
+    color: white;
     text-align: center;
     line-height: 70px;
     font-size: 30px;
     text-transform: uppercase;
-    font-family: 'Loto';
+    font-family: "Loto";
     padding-right: 20px;
     letter-spacing: 3px;
 }
+
 .container-header {
-    display:flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
 .img-logo {
-    width:100px;
+    width: 100px;
     max-width: 150px;
-    max-height:70px;
+    max-height: 70px;
 }
 
-@media (max-width: 780px){
-
+@media (max-width: 780px) {
     h1 {
-
         font-size: 20px;
-
     }
-
 }
-@media (max-width: 627px){
 
+@media (max-width: 627px) {
     h1 {
-
         font-size: 15px;
-
     }
 
     .img-logo {
-        width:60px;
-        height:50px;
+        width: 60px;
+        height: 50px;
         max-width: 150px;
-        max-height:70px;
+        max-height: 70px;
+    }
+}
+
+@media (max-width: 475px) {
+    .container-header {
+        flex-direction: column;
+        column-gap: 30px;
+        padding-bottom: 10px;
     }
 
-}
-@media (max-width: 475px){
-
-   .container-header{
-flex-direction: column;
-column-gap: 30px;
-padding-bottom: 10px;
-   }
-
-   .img-logo {
-    margin:auto auto;
-    
-   }
-
-   
+    .img-logo {
+        margin: auto auto;
+    }
 }
 
 .dark-mode {
-    color:#fff;
-    background-color:#000;
+    color: #fff;
+    background-color: #000;
     font-size: 15px;
-    padding:8px;
+    padding: 8px;
     align-self: center;
-    cursor:pointer;
-    border-radius:10px;
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
-    -ms-border-radius:10px;
-    -o-border-radius:10px;
-    -webkit-border-radius:10px;
+    cursor: pointer;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 
 .dark-mode:hover {
-    color:#000;
+    color: #000;
     background-color: #fff;
-    
 }
