--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,41 +1,34 @@
 main {
-    
     min-height: calc(100vh - 20vh - 70px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-
 .article_section {
-    position:relative;
+    position: relative;
     margin: 30px auto;
-    padding-top:12px;
-    padding-left:40px;
+    padding-top: 12px;
+    padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
     max-width: 90%;
     height: auto;
-    background-color:#789090;
+    background-color: #789090;
     border: 3px solid rgb(0, 0, 0);
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    width:80%;
+    width: 80%;
 }
 
-/* @media (max-width:740px){
-
-    .article_section {
-        width:30%;
-    }
-} */
-
-.article_section h2, .article_section h3, .article_section h4 {
+.article_section h2,
+.article_section h3,
+.article_section h4 {
     text-align: center;
-    color:#fff;
+    color: #fff;
 }
 
 .article_section h2 {
@@ -46,37 +39,37 @@ main {
 }
 
 .article_section p {
-    color:#fff;
+    color: #fff;
     text-shadow: 3px 3px 3px #000000;
     font-size: 22px;
     text-align: justify;
 }
 
 .next-button {
-    position:absolute;
+    position: absolute;
     right: 15px;
     bottom: 15px;
-    cursor:pointer;
-    color:#fff;
+    cursor: pointer;
+    color: #fff;
     border: 1px solid #2c2323;
-    background:#000;
-    padding:10px;
+    background: #000;
+    padding: 10px;
     border-radius: 100%;
     font-size: 22px;
-    transition:all 300ms;
+    transition: all 300ms;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     -ms-border-radius: 100%;
     -o-border-radius: 100%;
-    -webkit-transition:all 300ms;
-    -moz-transition:all 300ms;
-    -ms-transition:all 300ms;
-    -o-transition:all 300ms;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    -ms-transition: all 300ms;
+    -o-transition: all 300ms;
 }
 
 .next-button:hover {
-    color:#000;
+    color: #000;
     background-color: #fff;
-    border:1px solid #000000;
+    border: 1px solid #000000;
     box-shadow: 2px 2px 10px #000000;
 }
