--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,5 +1,5 @@
 main {
-    min-height: calc(100vh - 20vh - 70px);
+    min-height: calc(100vh - 15vh - 70px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,19 +9,14 @@ main {
     position: relative;
     margin: 30px auto;
     padding-top: 12px;
-    padding-left: 40px;
+    padding-left: 50px;
     padding-right: 40px;
     padding-bottom: 40px;
     max-width: 90%;
     height: auto;
-    background-color: #789090;
-    border: 3px solid rgb(0, 0, 0);
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    width: 80%;
+    background-color: #00482b;
+
+    width: 90%;
 }
 
 .article_section h2,
@@ -34,15 +29,17 @@ main {
 .article_section h2 {
     text-decoration: underline;
     text-transform: uppercase;
-    font-size: 25px;
-    letter-spacing: 3px;
+    font-size: 28px;
+    letter-spacing: 5px;
 }
 
 .article_section p {
     color: #fff;
-    text-shadow: 3px 3px 3px #000000;
-    font-size: 22px;
+    text-shadow: 0px 0px 8px #000000;
+    font-size: 25px;
     text-align: justify;
+    font-weight: bold;
+    word-spacing: 8px;
 }
 
 .next-button {
@@ -51,25 +48,23 @@ main {
     bottom: 15px;
     cursor: pointer;
     color: #fff;
-    border: 1px solid #2c2323;
     background: #000;
     padding: 10px;
     border-radius: 100%;
     font-size: 22px;
-    transition: all 300ms;
+    transition: all 500ms;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     -ms-border-radius: 100%;
     -o-border-radius: 100%;
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    -ms-transition: all 300ms;
-    -o-transition: all 300ms;
+    -webkit-transition: all 500ms;
+    -moz-transition: all 500ms;
+    -ms-transition: all 500ms;
+    -o-transition: all 500ms;
 }
 
 .next-button:hover {
     color: #000;
     background-color: #fff;
-    border: 1px solid #000000;
-    box-shadow: 2px 2px 10px #000000;
+    box-shadow: 0px 0px 6px #000000;
 }
