--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,22 +1,29 @@
 footer {
-    width: 100vw;
-    height: 20vh;
+    width: 100%;
+    height: 15vh;
     background-color: #4d4d4d;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 footer p {
-    color: white;
+    color: #ffffff;
     font-size: 16px;
     text-align: center;
 }
+
 .udec-link {
     text-decoration: none;
     color: white;
     font-size: 15px;
-    transition: 0.25s;
+    transition: all 300ms;
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    -ms-transition: all 300ms;
+    -o-transition: all 300ms;
 }
+
 .udec-link:hover {
     color: #79c000;
     cursor: pointer;
