--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,21 +5,22 @@
 }
 
 header {
-    background-color: #79c000;
+    background-color: #4d4d4d;
     width: 100%;
-    height: 10%;
+    height: 15%;
     margin: 0 auto;
+    border-bottom: 4px solid #fff;
 }
 
-h1 {
-    color: white;
+header h1 {
+    color: #ffffff;
     text-align: center;
     line-height: 70px;
     font-size: 30px;
     text-transform: uppercase;
     font-family: "Loto";
     padding-right: 20px;
-    letter-spacing: 3px;
+    letter-spacing: 6px;
 }
 
 .container-header {
