border radius article

--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -15,8 +15,12 @@ main {
     max-width: 90%;
     height: auto;
     background-color: #00482b;
-
+    border-radius: 20px;
     width: 90%;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
 }
 
 .article_section h2,
