--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,3 +1,38 @@
+form {
+    background-color: #000;
+    padding: 20px;
+    width: 90%;
+    margin: 0px auto;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+form>label {
+    color: #fff;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+
+form>input {
+    padding: 8px;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    margin-left: 20px;
+    border: none;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
 main {
     min-height: calc(100vh - 15vh - 70px);
     display: flex;
