--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -10,6 +10,12 @@ form {
     -o-border-radius: 10px;
 }
 
+form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 form>label {
     color: #fff;
     font-weight: bold;
@@ -108,4 +114,20 @@ main {
     color: #000;
     background-color: #fff;
     box-shadow: 0px 0px 6px #000000;
+}
+
+@media (max-width: 780px) {
+    form {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    form>label {
+        text-align: center;
+    }
+
+    form>input {
+        margin: 0px auto;
+        width: 80%;
+    }
 }
