--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -2,6 +2,7 @@ form {
     background-color: #000;
     padding: 20px;
     width: 90%;
+    height:90px;
     margin: 0px auto;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -19,6 +20,7 @@ form {
 form>label {
     color: #fff;
     font-weight: bold;
+    line-height: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
@@ -29,7 +31,8 @@ form>input {
     font-weight: bold;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 70%;
+    width: 80%;
+    text-transform: uppercase;
     margin-left: 20px;
     border: none;
     border-radius: 8px;
