--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -58,7 +58,7 @@ main {
     padding-bottom: 40px;
     max-width: 90%;
     height: auto;
-    background-color: #00482b;
+    background-image:url("../../../public/images/udec.jpeg");
     border-radius: 20px;
     width: 90%;
     -webkit-border-radius: 20px;
@@ -71,7 +71,7 @@ main {
 .article_section h3,
 .article_section h4 {
     text-align: center;
-    color: #fff;
+    color: #ffffff;
 }
 
 .article_section h2 {
@@ -82,8 +82,8 @@ main {
 }
 
 .article_section p {
-    color: #fff;
-    text-shadow: 0px 0px 8px #000000;
+    color: #ffffff;
+    text-shadow: 0px 0px 20px #000;
     font-size: 25px;
     text-align: justify;
     font-weight: bold;
