--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    /* background-image:url("../public/images/udec.jpeg"); */
-    background-color: #fff;
+    background-image:url("../public/images/udec.jpeg");
+    
     overflow-x: hidden;
 }
