--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 }
 body {
     background-image:url("../public/images/udec.jpeg");
-    
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     overflow-x: hidden;
 }
