--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,21 +1,20 @@
 form {
     background-color: #000;
     padding: 20px;
-    width: 90%;
-    height: 90px;
+    width: 96%;
     margin: 0px auto;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-}
-
-form {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    
 }
+
 
 form>label {
     color: #fff;
@@ -24,6 +23,8 @@ form>label {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
+ 
+  
 }
 
 form>input {
@@ -31,7 +32,7 @@ form>input {
     font-weight: bold;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 80%;
+    width: 50%;
     text-transform: uppercase;
     margin-left: 20px;
     border: none;
@@ -40,6 +41,19 @@ form>input {
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
+   
+}
+
+form > i {
+    color:#ffffff;
+    font-size: 35px;
+    margin-left:4px;
+    cursor:pointer;
+    margin-top: 9px;
+   
+   
+
+
 }
 
 main {
@@ -123,7 +137,7 @@ main {
 @media (max-width: 780px) {
     form {
         flex-direction: column;
-        gap: 30px;
+        gap:20px
     }
 
     form>label {
@@ -131,7 +145,10 @@ main {
     }
 
     form>input {
-        margin: 0px auto;
-        width: 80%;
+       width:90%;
+    }
+
+    form > i {
+        text-align: center;
     }
 }
