--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -110,7 +110,7 @@ main {
 .next-button {
     position: absolute;
     right: 15px;
-    bottom: 15px;
+    bottom: 8px;
     cursor: pointer;
     color: #fff;
     background: #000;
@@ -126,6 +126,32 @@ main {
     -moz-transition: all 500ms;
     -ms-transition: all 500ms;
     -o-transition: all 500ms;
+}
+.button-anterior {
+    position: absolute;
+    left: 15px;
+    bottom: 8px;
+    cursor: pointer;
+    color: #fff;
+    background: #000;
+    padding: 10px;
+    border-radius: 100%;
+    font-size: 22px;
+    transition: all 500ms;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    -webkit-transition: all 500ms;
+    -moz-transition: all 500ms;
+    -ms-transition: all 500ms;
+    -o-transition: all 500ms;
+
+}
+.button-anterior:hover {
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px #000000;
 }
 
 .next-button:hover {
