--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -12,9 +12,7 @@ form {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    
 }
-
 
 form>label {
     color: #fff;
@@ -23,8 +21,6 @@ form>label {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
- 
-  
 }
 
 form>input {
@@ -41,19 +37,14 @@ form>input {
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
-   
 }
 
-form > i {
-    color:#ffffff;
+form>i {
+    color: #ffffff;
     font-size: 35px;
-    margin-left:4px;
-    cursor:pointer;
+    margin-left: 4px;
+    cursor: pointer;
     margin-top: 9px;
-   
-   
-
-
 }
 
 main {
@@ -64,7 +55,7 @@ main {
 }
 
 .article_section {
-    opacity: .7;
+    opacity: 0.7;
     position: relative;
     margin: 30px auto;
     padding-top: 12px;
@@ -127,6 +118,7 @@ main {
     -ms-transition: all 500ms;
     -o-transition: all 500ms;
 }
+
 .button-anterior {
     position: absolute;
     left: 15px;
@@ -146,8 +138,8 @@ main {
     -moz-transition: all 500ms;
     -ms-transition: all 500ms;
     -o-transition: all 500ms;
-
 }
+
 .button-anterior:hover {
     color: #000;
     background-color: #fff;
@@ -163,7 +155,7 @@ main {
 @media (max-width: 780px) {
     form {
         flex-direction: column;
-        gap:20px
+        gap: 20px;
     }
 
     form>label {
@@ -171,10 +163,10 @@ main {
     }
 
     form>input {
-       width:90%;
+        width: 90%;
     }
 
-    form > i {
+    form>i {
         text-align: center;
     }
 }
