--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,5 +1,6 @@
 form {
-    background-color: #000;
+    background-color: rgba(0,0,0,.55);
+
     padding: 20px;
     width: 96%;
     margin: 0px auto;
