--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,9 +7,8 @@
 header {
     background-color: #4d4d4d;
     width: 100%;
-    height: 15%;
+    height: 30%;
     margin: 0 auto;
-    border-bottom: 4px solid #fff;
 }
 
 header h1 {
@@ -36,15 +35,16 @@ header h1 {
     max-height: 70px;
 }
 
-@media (max-width: 780px) {
-    h1 {
-        font-size: 20px;
+@media (max-width: 934px) {
+  header >  h1 {
+        font-size: 17px;
     }
 }
 
-@media (max-width: 627px) {
+@media (max-width: 742px) {
     h1 {
-        font-size: 15px;
+        font-size: 10px;
+       
     }
 
     .img-logo {
@@ -55,7 +55,7 @@ header h1 {
     }
 }
 
-@media (max-width: 475px) {
+@media (max-width: 742px) {
     .container-header {
         flex-direction: column;
         column-gap: 30px;
