--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,14 +1,13 @@
 form {
     background-color: rgba(0,0,0,.55);
-
-    padding: 20px;
+    padding: 10px;
     width: 96%;
     margin: 0px auto;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -18,34 +17,37 @@ form {
 form>label {
     color: #fff;
     font-weight: bold;
-    line-height: 50px;
+    margin-left: 25px;
+    line-height: 35px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
 }
 
 form>input {
-    padding: 8px;
+    padding: 4px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 50%;
+    width: 60%;
+    height:35px;
     text-transform: uppercase;
-    margin-left: 20px;
     border: none;
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
 }
 
 form>i {
+
     color: #ffffff;
     font-size: 35px;
     margin-left: 4px;
     cursor: pointer;
     margin-top: 9px;
+    margin-right: 25px;
 }
 
 main {
