--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,5 +1,5 @@
 form {
-    background-color: rgba(0,0,0,.55);
+    background-color: rgba(0, 0, 0, 0.55);
     padding: 10px;
     width: 96%;
     margin: 0px auto;
@@ -30,7 +30,7 @@ form>input {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     width: 60%;
-    height:35px;
+    height: 35px;
     text-transform: uppercase;
     border: none;
     border-radius: 6px;
@@ -41,7 +41,6 @@ form>input {
 }
 
 form>i {
-
     color: #ffffff;
     font-size: 35px;
     margin-left: 4px;
