--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+main {
+    min-height: calc(100vh - 15vh - 70px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
 }
