--- a/src/components/Cite/Cite.css
+++ b/src/components/Cite/Cite.css
@@ -1,65 +1,7 @@
-form {
-    background-color: rgba(0, 0, 0, 0.55);
-    padding: 10px;
-    width: 96%;
-    margin: 0px auto;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-form>label {
-    color: #fff;
-    font-weight: bold;
-    margin-left: 25px;
-    line-height: 35px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    letter-spacing: 2px;
-}
-
-form>input {
-    padding: 4px;
-    font-weight: bold;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 60%;
-    height: 35px;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 6px;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    -ms-border-radius: 6px;
-    -o-border-radius: 6px;
-}
-
-form>i {
-    color: #ffffff;
-    font-size: 35px;
-    margin-left: 4px;
-    cursor: pointer;
-    margin-top: 9px;
-    margin-right: 25px;
-}
-
-main {
-    min-height: calc(100vh - 15vh - 70px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .article_section {
     opacity: 0.7;
     position: relative;
-    margin: 30px auto;
+    margin-bottom: 20px;
     padding-top: 12px;
     padding-left: 50px;
     padding-right: 40px;
