--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,11 +4,29 @@
     src: url("../fonts/Lato-BlackItalic.ttf");
 }
 
-header {
+.container-header {
     background-color: #4d4d4d;
     width: 100%;
     height: 30%;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.switch-btn {
+    width: 100px;
+    height: 25px;
+    align-self: center;
+    border-radius: 20px;
+    font-size: 16px;
+    font-family: "Loto";
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    cursor: pointer;
+    border: none;
 }
 
 header h1 {
@@ -22,12 +40,6 @@ header h1 {
     letter-spacing: 6px;
 }
 
-.container-header {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
 
 .img-logo {
     width: 100px;
