--- a/src/components/Gratuidad/Gratuidad.css
+++ b/src/components/Gratuidad/Gratuidad.css
@@ -4,9 +4,9 @@
     margin-bottom: 20px;
     padding-top: 12px;
     padding-left: 50px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    max-width: 90%;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    width: 90%;
     height: auto;
     background-color: #00482b;
     border-radius: 20px;
@@ -16,6 +16,7 @@
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
 }
+
 .question_section h2,
 .question_section h3,
 .question_section h4 {
@@ -24,7 +25,6 @@
 }
 
 .question_section h2 {
-    text-decoration: underline;
     text-transform: uppercase;
     font-size: 28px;
     letter-spacing: 5px;
@@ -39,4 +39,81 @@
     line-height: 42px;
     letter-spacing: 2px;
     word-spacing: 8px;
+}
+
+.items_list, .paragraphs_list {
+    padding-left: 30px;
+}
+
+.next-button {
+    position: absolute;
+    right: 15px;
+    bottom: 8px;
+    cursor: pointer;
+    color: #fff;
+    background: #000;
+    padding: 10px;
+    border-radius: 100%;
+    font-size: 22px;
+    transition: all 500ms;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    -webkit-transition: all 500ms;
+    -moz-transition: all 500ms;
+    -ms-transition: all 500ms;
+    -o-transition: all 500ms;
+}
+
+.button-anterior {
+    position: absolute;
+    left: 15px;
+    bottom: 8px;
+    cursor: pointer;
+    color: #fff;
+    background: #000;
+    padding: 10px;
+    border-radius: 100%;
+    font-size: 22px;
+    transition: all 500ms;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+    -webkit-transition: all 500ms;
+    -moz-transition: all 500ms;
+    -ms-transition: all 500ms;
+    -o-transition: all 500ms;
+}
+
+.button-anterior:hover {
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px #000000;
+}
+
+.next-button:hover {
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0px 0px 6px #000000;
+}
+
+@media (max-width: 600px) {
+    .question_section {
+        width: 97.5%;
+        padding: 5px 10px 50px 10px;
+    }
+    
+    .question_section h2 {
+        font-size: 18px;
+        letter-spacing: 3px;
+    }
+    
+    .question_section p {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        word-spacing: 0px;
+    }
 }
