--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,10 +8,11 @@
     background-color: #4d4d4d;
     width: 100%;
     height: 30%;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0 25px 0 15px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .switch-btn {
@@ -29,7 +30,13 @@
     border: none;
 }
 
-header h1 {
+.img-logo {
+    width: 100px;
+    max-width: 150px;
+    max-height: 70px;
+}
+
+.header-title {
     color: #ffffff;
     text-align: center;
     line-height: 70px;
@@ -40,51 +47,24 @@ header h1 {
     letter-spacing: 6px;
 }
 
-
-.img-logo {
-    width: 100px;
-    max-width: 150px;
-    max-height: 70px;
-}
-
-@media (max-width: 934px) {
-    header>h1 {
-        font-size: 17px;
-    }
-}
-
-@media (max-width: 742px) {
-    h1 {
-        font-size: 10px;
-    }
-
-    .img-logo {
-        width: 60px;
-        height: 50px;
-        max-width: 150px;
-        max-height: 70px;
-    }
-}
-
-@media (max-width: 742px) {
-    .container-header {
-        flex-direction: column;
-        column-gap: 30px;
-        padding-bottom: 10px;
-    }
-
-    .img-logo {
-        margin: auto auto;
-    }
+.header-buttons {
+    display: flex;
+    gap: 20px;
 }
 
 .dark-mode {
+    width: 30px;
+    height: 30px;
     color: #fff;
     background-color: #000;
-    font-size: 15px;
-    padding: 8px;
+    font-size: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     align-self: center;
     cursor: pointer;
+    border: none;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -93,7 +73,32 @@ header h1 {
     -webkit-border-radius: 10px;
 }
 
+.dark-mode i {
+    font-size: 20px;
+}
+
 .dark-mode:hover {
     color: #000;
     background-color: #fff;
+}
+
+@media (max-width: 600px) {
+    .container-header {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 2.5px;
+        height: 10%;
+        padding: 5px;
+    }
+    .header-title {
+        font-size: 18px;
+        line-height: 1.5;
+        padding: 0;
+        letter-spacing: 3px;
+    }
+    .header-buttons {
+        width: 95%;
+        justify-content: space-between;
+    }
 }
