--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,6 +1,6 @@
 .form {
     background-color: rgba(0, 0, 0, 0.55);
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
     width: 90%;
     margin-top: 20px;
     border-radius: 5px;
@@ -9,29 +9,33 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
 }
-
 .form>label {
+    width: 200px;
     color: #fff;
     font-weight: bold;
-    margin-left: 25px;
     line-height: 35px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     letter-spacing: 2px;
 }
-
-.form>input {
+.input-and-search-btn{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.input {
+    width: 80%;
+    height: 35px;
     padding: 4px;
     font-weight: bold;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 60%;
-    height: 35px;
     text-transform: uppercase;
     border: none;
     border-radius: 6px;
@@ -54,7 +58,35 @@
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
 }
-.form>i {
+.search-btn>i {
     font-size: 35px;
     margin: 0;
+}
+@media (max-width: 600px) {
+    .form{
+        padding: 5px;
+        width: 97.5%;
+        margin-top: 20px;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 5px;
+        align-items: center;
+    }
+    .form>label {
+        width: 180px;
+        line-height: 1.5;
+        font-size: 16px;
+        letter-spacing: 2px;
+    }
+    .input-and-search-btn{
+        width: 100%;
+        gap: 5px;
+    }
+    .input {
+        width: 90%;
+        height: 25px;
+        padding: 2px;
+        font-size: 12px;
+        padding-left: 5px;
+    }
 }
