--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Loto";
+    src: url("../fonts/Lato-Black.ttf");
+    src: url("../fonts/Lato-BlackItalic.ttf");
+}
+
 footer {
     width: 100%;
     height: 15vh;
@@ -13,12 +19,9 @@ footer {
 footer a {
     color: #ffffff;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Loto";
 }
-footer span {
-    color:#fff;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 
 .udec-link {
     text-decoration: none;
