--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "Loto";
+    src: url("../fonts/Lato-Black.ttf");
+    src: url("../fonts/Lato-BlackItalic.ttf");
+}
+
+
 .form {
     background-color: rgba(0, 0, 0, 0.55);
     padding: 10px 20px 10px 20px;
@@ -18,7 +25,7 @@
     color: #fff;
     font-weight: bold;
     line-height: 35px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Loto";
     font-size: 20px;
     letter-spacing: 2px;
 }
@@ -35,7 +42,7 @@
     padding: 4px;
     font-weight: bold;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Loto";
     text-transform: uppercase;
     border: none;
     border-radius: 6px;
