--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,14 +52,34 @@
     gap: 20px;
 }
 
+@media (max-width: 800px) {
+    .container-header {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        height: 10%;
+        padding: 8px;
+    }
+
+    .header-title {
+        font-size: 25px;
+        line-height: 1.5;
+        padding: 0;
+        letter-spacing: 3px;
+    }
+
+   
+}
+
 @media (max-width: 600px) {
     .container-header {
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        gap: 2.5px;
+        gap: 15px;
         height: 10%;
-        padding: 5px;
+        padding: 10px;
     }
 
     .header-title {
@@ -69,8 +89,5 @@
         letter-spacing: 3px;
     }
 
-    .header-buttons {
-        width: 95%;
-        justify-content: space-between;
-    }
+   
 }
