--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -9,14 +9,15 @@
     background-color: rgba(0, 0, 0, 0.55);
     padding: 10px 20px 10px 20px;
     width: 90%;
-    margin-top: 20px;
+    margin: 0 auto;
+    margin-top: 10px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -24,20 +25,21 @@
     width: 200px;
     color: #fff;
     font-weight: bold;
+    text-align: center;
     line-height: 35px;
     font-family: "Loto";
     font-size: 20px;
     letter-spacing: 2px;
 }
 .input-and-search-btn{
-    width: 80%;
+    width: 95%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
 }
 .input {
-    width: 80%;
+    width: 90%;
     height: 35px;
     padding: 4px;
     font-weight: bold;
@@ -56,7 +58,11 @@
     color: #ffffff;
     border: none;
     cursor: pointer;
-    transition: 0.25s;
+    transition: 300ms;
+    -webkit-transition: 300ms;
+    -moz-transition: 300ms;
+    -ms-transition: 300ms;
+    -o-transition: 300ms;
 }
 .search-btn:hover{
     transform: scale(1.1);
@@ -72,7 +78,6 @@
 @media (max-width: 600px) {
     .form{
         padding: 5px;
-        width: 97.5%;
         margin-top: 20px;
         flex-direction: column;
         justify-content: flex-start;
